--- a/slc.html
+++ b/slc.html
@@ -160,7 +160,7 @@
 
   <div class="w3-row"><br>
 
-  <div class="w3-quarter">
+  <div class="w3-half">
     <a onclick="document.getElementById('id01').style.display='block'"><img src="media/spn1.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   </div>
 
@@ -177,7 +177,7 @@
       </div>
     </div>
 
-  <div class="w3-quarter">
+  <div class="w3-half">
     <a onclick="document.getElementById('id02').style.display='block'"><img src="media/spn2.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   </div>
 
@@ -194,7 +194,7 @@
   </div>
 
 
-  <div class="w3-quarter">
+  <div class="w3-half">
     <a onclick="document.getElementById('id03').style.display='block'"><img src="media/spn3.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   </div>
   <div id="id03" class="modal">
@@ -210,7 +210,7 @@
   </div>
 
 
-  <div class="w3-quarter">
+  <div class="w3-half">
     <a onclick="document.getElementById('id04').style.display='block'"><img src="media/spn4.png" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
   </div>
   <div id="id04" class="modal">
