--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
             <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
             <a href="#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
-            <!-- <a href="#achievements" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Achievements</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+            <a href="events.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Past Events</a>
+  <!--<a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
     <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">Past Events <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
@@ -61,7 +61,7 @@
 
     <!-- Image Header -->
     <div class="w3-display-container w3-animate-opacity">
-        <img src="media/cover.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover;">
+        <img src="media/cover.JPG" alt="boat" style="width:100%;min-height:350px;max-height:600px; object-fit: cover;">
         <div class="w3-container w3-display-bottomleft w3-margin-bottom">
             <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Amity CSI Student Branch</button>
         </div>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="w3-quarter">
-                <a href="https://www.linkedin.com/in/shivam-saraf-046a52168/" target="_blank"><img src="media/shivam.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+                <a href="https://www.linkedin.com/in/shivam-saraf-046a52168/" target="_blank"><img src="media/shivam.JPG" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
                 <h3>Shivam Saraf</h3>
                 <p>Secretary</p>
             </div>
