--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
             <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Events</a>
             <a href="#aboutus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
-            <a href="events.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Past Events</a>
+            <a href="HTML/Events.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Past Events</a>
   <!--<a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
     <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">Past Events <i class="fa fa-caret-down"></i></button>
