--- a/HTML/Events.html
+++ b/HTML/Events.html
@@ -41,7 +41,7 @@
           <div class="face face1">
             <div class="content">
               <img src="../media/sketch.png" alt="text" />
-              <h3>design</h3>
+              <h3>Event</h3>
             </div>
           </div>
           <div class="face face2">
@@ -60,7 +60,7 @@
           <div class="face face1">
             <div class="content">
               <img src="../media/sketch.png" alt="text" />
-              <h3>design</h3>
+              <h3>Event</h3>
             </div>
           </div>
           <div class="face face2">
@@ -79,7 +79,7 @@
           <div class="face face1">
             <div class="content">
               <img src="../media/sketch.png" alt="text" />
-              <h3>design</h3>
+              <h3>Event</h3>
             </div>
           </div>
           <div class="face face2">
