--- a/HTML/Events.html
+++ b/HTML/Events.html
@@ -82,8 +82,9 @@
             </div>
         </div>
     </main>
-    <div id="particles-js"></div>
+    <!-- <div id="particles-js"></div>
     <script src="particles.js"></script>
+    <script src="app.js"></script> -->
 </body>
 
 </html>
