added animated background

--- a/HTML/Events.html
+++ b/HTML/Events.html
@@ -1,104 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../CSS/events.css" />
-    <title>Events</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="../CSS/events.css" />
+		<title>Events</title>
+	</head>
 
-  <body>
-    <header>
-      <!-- Events animated header -->
-      <div>
-        <svg
-          width="500"
-          height="114"
-          viewBox="0 0 500 114"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          id="events"
-        >
-          <path
-            d="M57.268 50.84V48.34H54.768H20.692V19.788H59.088H61.588V17.288V6.488V3.988H59.088H5.08801H2.58801V6.488V107V109.5H5.08801H59.088H61.588V107V96.2V93.7H59.088H20.692V64.14H54.768H57.268V61.64V50.84ZM164.199 7.51459L165.476 4.132H161.86H148.036H146.286L145.687 5.77607L116.5 85.874L87.3131 5.77607L86.714 4.132H84.9641H70.9961H67.3808L68.6571 7.51459L106.529 107.883L107.139 109.5H108.868H123.988H125.717L126.327 107.883L164.199 7.51459ZM228.409 50.84V48.34H225.909H191.833V19.788H230.229H232.729V17.288V6.488V3.988H230.229H176.229H173.729V6.488V107V109.5H176.229H230.229H232.729V107V96.2V93.7H230.229H191.833V64.14H225.909H228.409V61.64V50.84ZM328.969 109.5H331.469V107V6.488V3.988H328.969H315.865H313.365V6.488V77.9444L265.247 5.10995L264.505 3.988H263.161H250.057H247.557V6.488V107V109.5H250.057H263.161H265.661V107V35.4121L313.778 108.376L314.519 109.5H315.865H328.969ZM415.583 6.632V4.132H413.083H345.115H342.615V6.632V17.288V19.788H345.115H370.119V107V109.5H372.619H385.723H388.223V107V19.788H413.083H415.583V17.288V6.632ZM442.131 106.821L442.156 106.832L442.181 106.843C447.82 109.304 454.12 110.508 461.037 110.508C468.275 110.508 474.691 109.099 480.205 106.186C485.638 103.316 489.842 99.5148 492.701 94.7502C495.519 90.0535 496.945 85.0027 496.945 79.64C496.945 72.9508 495.426 67.3512 492.097 63.1272C488.984 59.0845 485.205 56.0759 480.765 54.1681C476.573 52.2737 471.117 50.4134 464.443 48.5753C459.028 47.0554 454.851 45.7398 451.881 44.6283C449.255 43.5204 447.034 41.9638 445.188 39.9563C443.656 38.1946 442.801 35.8477 442.801 32.696C442.801 28.2398 444.277 25.0712 447.053 22.8349L447.07 22.8218L447.085 22.8085C450.001 20.3792 453.859 19.068 458.877 19.068C464.305 19.068 468.39 20.4401 471.383 22.9483L471.399 22.9612L471.415 22.9739C474.562 25.5263 476.171 28.337 476.556 31.4221L476.83 33.612H479.037H493.437H496.196L495.925 30.8663C495.091 22.4267 491.352 15.5583 484.756 10.4247C478.266 5.29882 470.001 2.836 460.173 2.836C453.349 2.836 447.18 4.04118 441.718 6.51461L441.71 6.51832L441.701 6.5221C436.324 9.00381 432.06 12.5615 428.998 17.2082C425.922 21.8741 424.409 27.2087 424.409 33.128C424.409 39.7257 425.881 45.2957 429.079 49.5958L429.1 49.6248L429.123 49.6531C432.235 53.5957 435.963 56.5514 440.304 58.4571L440.314 58.4615L440.324 58.4659C444.514 60.2615 449.971 62.0253 456.653 63.7687C461.984 65.1968 466.151 66.512 469.193 67.71C472.016 68.8223 474.319 70.4247 476.152 72.5076C477.785 74.3632 478.697 76.8556 478.697 80.216C478.697 84.3987 477.179 87.7381 474.086 90.424C471.12 92.9877 466.874 94.42 461.037 94.42C454.907 94.42 450.618 92.9384 447.777 90.3494C444.859 87.5042 443.208 84.0752 442.788 79.9622L442.559 77.716H440.301H426.333H423.789L423.833 80.2599C423.938 86.2011 425.616 91.5419 428.897 96.1999L428.905 96.211L428.913 96.222C432.17 100.739 436.606 104.263 442.131 106.821Z"
-            stroke="black"
-            stroke-width="5"
-          />
-        </svg>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">2017-2018</a></li>
-          <li><a href="#">2018-2019</a></li>
-          <li><a href="#">2019-2020</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-      <div class="container">
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="../media/sketch.png" alt="text" />
-              <h3>Event</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
-                unde libero. Neque error dolores sit, possimus itaque
-                perspiciatis in, laboriosam dolorem temporibus molestiae veniam,
-                excepturi id commodi minima? Alias, mollitia!
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="../media/sketch.png" alt="text" />
-              <h3>Event</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
-                unde libero. Neque error dolores sit, possimus itaque
-                perspiciatis in, laboriosam dolorem temporibus molestiae veniam,
-                excepturi id commodi minima? Alias, mollitia!
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="../media/sketch.png" alt="text" />
-              <h3>Event</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
-                unde libero. Neque error dolores sit, possimus itaque
-                perspiciatis in, laboriosam dolorem temporibus molestiae veniam,
-                excepturi id commodi minima? Alias, mollitia!
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-    <!-- <div id="particles-js"></div>
-    <script src="particles.js"></script>
-    <script src="app.js"></script> -->
-  </body>
+	<body>
+		<header>
+			<!-- Events animated header -->
+			<div>
+				<svg
+					width="500"
+					height="114"
+					viewBox="0 0 500 114"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+					id="events"
+				>
+					<path
+						d="M57.268 50.84V48.34H54.768H20.692V19.788H59.088H61.588V17.288V6.488V3.988H59.088H5.08801H2.58801V6.488V107V109.5H5.08801H59.088H61.588V107V96.2V93.7H59.088H20.692V64.14H54.768H57.268V61.64V50.84ZM164.199 7.51459L165.476 4.132H161.86H148.036H146.286L145.687 5.77607L116.5 85.874L87.3131 5.77607L86.714 4.132H84.9641H70.9961H67.3808L68.6571 7.51459L106.529 107.883L107.139 109.5H108.868H123.988H125.717L126.327 107.883L164.199 7.51459ZM228.409 50.84V48.34H225.909H191.833V19.788H230.229H232.729V17.288V6.488V3.988H230.229H176.229H173.729V6.488V107V109.5H176.229H230.229H232.729V107V96.2V93.7H230.229H191.833V64.14H225.909H228.409V61.64V50.84ZM328.969 109.5H331.469V107V6.488V3.988H328.969H315.865H313.365V6.488V77.9444L265.247 5.10995L264.505 3.988H263.161H250.057H247.557V6.488V107V109.5H250.057H263.161H265.661V107V35.4121L313.778 108.376L314.519 109.5H315.865H328.969ZM415.583 6.632V4.132H413.083H345.115H342.615V6.632V17.288V19.788H345.115H370.119V107V109.5H372.619H385.723H388.223V107V19.788H413.083H415.583V17.288V6.632ZM442.131 106.821L442.156 106.832L442.181 106.843C447.82 109.304 454.12 110.508 461.037 110.508C468.275 110.508 474.691 109.099 480.205 106.186C485.638 103.316 489.842 99.5148 492.701 94.7502C495.519 90.0535 496.945 85.0027 496.945 79.64C496.945 72.9508 495.426 67.3512 492.097 63.1272C488.984 59.0845 485.205 56.0759 480.765 54.1681C476.573 52.2737 471.117 50.4134 464.443 48.5753C459.028 47.0554 454.851 45.7398 451.881 44.6283C449.255 43.5204 447.034 41.9638 445.188 39.9563C443.656 38.1946 442.801 35.8477 442.801 32.696C442.801 28.2398 444.277 25.0712 447.053 22.8349L447.07 22.8218L447.085 22.8085C450.001 20.3792 453.859 19.068 458.877 19.068C464.305 19.068 468.39 20.4401 471.383 22.9483L471.399 22.9612L471.415 22.9739C474.562 25.5263 476.171 28.337 476.556 31.4221L476.83 33.612H479.037H493.437H496.196L495.925 30.8663C495.091 22.4267 491.352 15.5583 484.756 10.4247C478.266 5.29882 470.001 2.836 460.173 2.836C453.349 2.836 447.18 4.04118 441.718 6.51461L441.71 6.51832L441.701 6.5221C436.324 9.00381 432.06 12.5615 428.998 17.2082C425.922 21.8741 424.409 27.2087 424.409 33.128C424.409 39.7257 425.881 45.2957 429.079 49.5958L429.1 49.6248L429.123 49.6531C432.235 53.5957 435.963 56.5514 440.304 58.4571L440.314 58.4615L440.324 58.4659C444.514 60.2615 449.971 62.0253 456.653 63.7687C461.984 65.1968 466.151 66.512 469.193 67.71C472.016 68.8223 474.319 70.4247 476.152 72.5076C477.785 74.3632 478.697 76.8556 478.697 80.216C478.697 84.3987 477.179 87.7381 474.086 90.424C471.12 92.9877 466.874 94.42 461.037 94.42C454.907 94.42 450.618 92.9384 447.777 90.3494C444.859 87.5042 443.208 84.0752 442.788 79.9622L442.559 77.716H440.301H426.333H423.789L423.833 80.2599C423.938 86.2011 425.616 91.5419 428.897 96.1999L428.905 96.211L428.913 96.222C432.17 100.739 436.606 104.263 442.131 106.821Z"
+						stroke="black"
+						stroke-width="5"
+					/>
+				</svg>
+			</div>
+			<nav>
+				<ul>
+					<li class="selected">2017-2018</li>
+					<li><a href="#">2018-2019</a></li>
+					<li><a href="#">2019-2020</a></li>
+				</ul>
+			</nav>
+		</header>
+		<!-- Event Cards -->
+		<main>
+			<div class="container">
+				<div class="card">
+					<div class="face face1">
+						<div class="content">
+							<img src="../media/sketch.png" alt="text" />
+							<h3>Decrypton</h3>
+						</div>
+					</div>
+					<div class="face face2">
+						<div class="content">
+							<p>
+								Our first Major event, established in the year 2015. Participation of 200+ students
+								which has been increasing every iteration.
+							</p>
+							<a href="#">Read More</a>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="face face1">
+						<div class="content">
+							<img src="../media/sketch.png" alt="text" />
+							<h3>Code Hunt</h3>
+						</div>
+					</div>
+					<div class="face face2">
+						<div class="content">
+							<p>
+								Our Second Major Event, established in the year 2016. This was one of our first
+								inter-college events open to outside participation.
+							</p>
+							<a href="#">Read More</a>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="face face1">
+						<div class="content">
+							<img src="../media/sketch.png" alt="text" />
+							<h3>Quiz-O-Mania</h3>
+						</div>
+					</div>
+					<div class="face face2">
+						<div class="content">
+							<p>
+								Our latest Major Event, established in the year 2017. First of its kind, game-show style
+								event with buzzers and rapid-fire rounds.
+							</p>
+							<a href="#">Read More</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- <br />	-->
+		</main>
+		<!-- Animated background -->
+		<div id="animate-bg">
+			<ul class="box-area">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+	</body>
 </html>
