--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
     <!-- about us Row -->
-    <div class="w3-row-padding w3-center w3-padding-64" id="aboutus">
+    <div class="w3-row-padding w3-center w3-padding-64" id="aboutus" style="margin: 0 5rem;">
         <h2>About Us</h2>
         <p>What our Student Branch Stands for and What We Do</p><br>
         <div class="information info2" id="info">
